Preparing to install Heroku

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,39 @@
+# Python
+*.pyc
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# Django
+*.log
+db.sqlite3
+db.sqlite3-journal
+media/
+staticfiles/
+
+# Environment
+.env
 .venv/
+venv/
+ENV/
+env/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Credentials
 creds.json
+*.json
+!package.json
+!package-lock.json
+
+# Heroku
+*.sqlite3
